# score_lifecycle

./: .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md  aasapplicationcontainer.cpp  aasapplicationcontainer.h  application.cpp  application.h  applicationcontext.cpp  applicationcontext.h  control_status.txt  defs.bzl  lifecyclemanager.cpp  lifecyclemanager.h  lm_status.txt  mw_com_control_status.txt  mw_com_lm_status.txt  mw_com_memory_comparison.md  requirements.in  requirements_lock.txt  runapplication.cpp  runapplication.h  versions.json
.devcontainer/: devcontainer.json
.github/: RELEASE_TEMPLATE.md  release.yml
.github/workflows/: build.yml  build_qnx8.yml  code_coverage.yml  copyright.yml  docs.yml  format.yml  license_check.yml  miri.yml  reference-integration.yml  test_and_docs.yml  tests.yml
config/: BUILD  flatbuffers_rules.bzl
demo/: run.sh
demo/config/: gen_launch_manager_cfg.py
design/: lifecycle.md  lifecyclemanager.md
design/model/: sequence_application_container.uxf  sequence_view.uxf  structural_view.uxf
docs/: conf.py  index.rst
docs/release_notes/: Release_note_v_0_2_0.rst  index.rst
examples/: BUILD  Dockerfile  README.md  demo.sh  run.sh  run_examples.bzl  toprc  tsan_suppressions
examples/config/: BUILD  hmcore.json  (+13 more)
examples/rust_supervised_app/: BUILD  Cargo.toml
examples/rust_supervised_app/src/: main.rs
health_monitor/: BUILD
launch_manager/: BUILD
main/: genindex.html  index.html  search.html
pr-22/: search.html
pr-6/: index.html
pr-9/: index.html
scripts/: build_qnx8.sh
tests/: README.md
(+486 files in other folders)
