[package]
name = "rust_supervised_app"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "rust_supervised_app"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
libc = { workspace = true }
signal-hook = { workspace = true }
lifecycle_client_rs = { path = "../../rust_bindings/lifecycle_client_rs" }
monitor_rs = { path = "../../rust_bindings/monitor_rs" }
